* added css fixes from #1484910 (issue: text was "invisible")

--- a/skins/default/common.css
+++ b/skins/default/common.css
@@ -70,6 +70,7 @@ input, textarea
   padding: 1px;
   padding-left: 3px;
   padding-right: 3px;
+  color: #333333;
   background-color: #ffffff;
   border: 1px solid #666666;
 }
